fix : align add : image

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -13,14 +13,16 @@
         <div class="product">
             <div class="product-header">
                 <span class="product-number">01</span>
-                <img src="path_to_product_image.jpg" alt="Product Name" class="product-image">
+                <img src="image/C4A1610E7468407FA935CBF8DE2164DF.jpg" alt="Product Name" class="product-image">
             </div>
             <div class="product-body">
-                <h3 class="product-title">Product Title</h3>
-                <p class="product-weight">Product Weight</p>
+                <h3 class="product-title">진한 사골곰탕 300g</h3>
+                <p class="product-weight">100% 사골로 고은 진한 사골곰탕</p>
                 <div class="product-pricing">
-                    <span class="product-price">Product Price</span>
-                    <span class="product-discount">Product Discount</span>
+                    <div class="price-container">
+                        <span class="product-price">1,590</span>
+                        <span class="product-discount">9</span><span class="discount-percentage">%</span>
+                    </div>
                 </div>
                 <button class="add-to-cart-btn">Add to Cart</button>
             </div>
