fix : image and text same padding

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -17,12 +17,10 @@
             </div>
             <div class="product-body">
                 <h3 class="product-title">진한 사골곰탕 300g</h3>
-                <p class="product-weight">100% 사골로 고은 진한 사골곰탕</p>
+                <p class="product-description">100% 사골로 고은 진한 사골곰탕</p>
                 <div class="product-pricing">
-                    <div class="price-container">
-                        <span class="product-price">1,590</span>
-                        <span class="product-discount">9</span><span class="discount-percentage">%</span>
-                    </div>
+                    <span class="product-price">1,590</span>
+                    <span class="product-discount">9</span><span class="discount-percentage">%</span>
                 </div>
                 <button class="add-to-cart-btn">Add to Cart</button>
             </div>
