--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="container">
-    <div class="product-grid">
+    <div class="product-grid" th:each="product, iterStat : ${Product}">
         <!-- Repeat this block for each product -->
         <div class="product">
             <div class="product-header">
@@ -135,30 +135,29 @@
 </body>
 </html>
 
-
 <script>
     function addToCart(productId) {
-        // 상품 ID, 수량 정보를 포함하는 FormData 객체 생성
         let formData = new FormData();
         formData.append("productId", productId);
         formData.append("quantity", 1);
 
-        fetch('/add',
-            {
-                method: 'POST',
-                body: formData
-            }
-        ).then(response => {
-            if (!response.ok) {
-                throw new Error('Network response was not ok' + response.statusText);
-            }
-            return response.json();
-        }).catch(error => {
-            alert(error.message);
-        }).then(data => {
-            console.log(data);
-        }).then(error => {
-            console.error('fetch failed');
-        });
+        fetch('/cart/add', {
+            method: 'POST',
+            body: formData
+        })
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error('Network response was not ok' + response.statusText);
+                }
+                return response.json();
+            })
+            .then(data => {
+                console.log(data);
+                alert("Product added to cart successfully!");
+            })
+            .catch(error => {
+                alert("Error adding product to cart: " + error.message);
+            });
     }
+
 </script>
